# Toggl-Tracking-Keys

./: Dockerfile  README.md  main.py  note  pyproject.toml  requirements.txt  script.spec
Code/: check_hotkeys.py  config.py  hotkeys_finalversion.py  main_test.py  record_hotkeys.py  streamlit.py  unittests.py
hotkeys/: streamlit.py
scratches/: config.py  hotkeys_finalversion.py  main.py  main_test.py  requirements.txt  run_program.py  run_program.spec  scratch.py  streamlit.py
