[tool.poetry]
name = "toggl-tracking-keys"
version = "0.1.0"
description = ""
authors = ["Marios Vettas <“marios.vettas@bluewin.ch”>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
keyboard = "^0.13.5"
chime = "^0.5.3"
streamlit = "^1.16.0"
pynput = '1.6.8'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
